# advent_of_code

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
2022/day01_calorie_counting/: part1.py
2022/day02_rock_paper_scissors/: part1.py  part2.py
2022/day03_rucksack_reorganization/: part1.py  part2.py
2022/day04_camp_cleanup/: part1.py  part2.py
2022/day05_supply_stacks/: part1.py  part2.py
2022/day06_tuning_trouble/: part1.py  part2.py
2022/day07_no_space_left_on_device/: part1.py  part2.py
2022/day08_treetop_tree_house/: part1.py  part2.py
2022/day09_rope_bridge/: part1.py  part2.py
2022/day10_cathode_ray_tube/: part1.py  part2.py
2022/day11_monkey_in_the_middle/: part1.py  part2.py
2022/day12_hill_climbing_algorithm/: part1.py  part2.py
2022/day13_distress_signal/: part1.py  part2.py
2022/day14_regolith_reservoir/: part1.py  part2.py
2022/day15_beacon_exclusion_zone/: part1.py  part2.py
2022/day16_proboscidea_volcanium/: part1.py  part2.py
2022/day17_pyroclastic_flow/: part1.py  part2.py
2022/day18_boiling_boulders/: part1.py  part2.py
2022/day19_not_enough_minerals/: part1.py  part2.py
2022/day20_grove_positioning_system/: part1.py  part2.py
2022/day21_monkey_math/: part1.py  part2.py
2022/day22_monkey_map/: part1.py  part2.py
2022/day23_unstable_diffusion/: part1.py  part2.py
2022/day24_blizzard_basin/: part1.py  part2.py
2022/day25_full_of_hot_air/: part1.py
2023/day01/: part1.py  part2.py
2023/day02/: part1.py  part2.py
2023/day03/: part1.py  part2.py
2023/day04/: part1.py  part2.py
2023/day05/: part1.py  part2-bruteforce.py  part2.py
2023/day06/: part1.py  part2.py
2023/day07/: part1.py  part2.py
2023/day08/: part1.py  part2.py
2023/day09/: part1.py  part2.py
2023/day10/: part1.py  part2.py
day01_calorie_counting/: part2.py
day03_rucksack_reorganization/: part1.py
day04_camp_cleanup/: part2.py
day06_tuning_trouble/: part1.py  part2.py
day07_no_space_left_on_device/: part1.py
day08_treetop_tree_house/: part1.py
day09_rope_bridge/: part1.py  part2.py
day10_cathode_ray_tube/: part2.py
day11_monkey_in_the_middle/: part2.py
day13_distress_signal/: part1.py  part2.py
day14_regolith_reservoir/: part1.py  part2.py
day16_proboscidea_volcanium/: part1.py  part2.py
day17_pyroclastic_flow/: part1.py  part2.py
day18_boiling_boulders/: part1.py
day19_not_enough_minerals/: part1.py  part2.py
day20_grove_positioning_system/: part2.py
day21_monkey_math/: part1.py  part2.py
day22_monkey_map/: part1.py  part2.py
day23_unstable_diffusion/: part1.py  part2.py
day24_blizzard_basin/: part1.py  part2.py
(+14 files in other folders)
