[tool.poetry]
name = "advent-of-code"
version = "1.0.0"
description = "My solutions to https://adventofcode.com/"
authors = ["Martin Winkel <martin@pythomation.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
